added twitter embed

--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -32,4 +32,6 @@
 
   {% endif %}
 
+  <a class="twitter-timeline" href="https://twitter.com/IS_GEOCommunity?ref_src=twsrc%5Etfw">Tweets by IS_GEOCommunity</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 </aside>
