--- a/_includes/lightning-talks.html
+++ b/_includes/lightning-talks.html
@@ -2,8 +2,8 @@
           {% for talks in site.data.sessions.lightningtalks %}
 <div style="border-bottom: 1px solid black;" id="{{ talks.name }}">
   <br> 
-              {% if talks.url %}
-              <h3><a href="{{ talks.url }}">{{talks.name}}</a></h3>
+              {% if talks.paperurl %}
+              <h3><a href="{{ talks.paperurl }}">{{talks.name}}</a></h3>
               {% else %}
               <h3><a href="{{ site.url }}{{ site.baseurl }}/speakers/#{{ talks.name }}">{{talks.name}}</a></h3>
               {% endif %}
