--- a/_includes/lightning-talks.html
+++ b/_includes/lightning-talks.html
@@ -51,7 +51,7 @@
                   <li>
                   <strong>{{ paper.papername }}</strong><br>
                   {% if paper.paperurl %}
-                    <a href="{{ paper.url }}">[Paper Link]</a>
+                    <a href="{{ paper.paperurl }}">[Paper Link]</a>
                   {% endif %}
                   {% if paper.paper %}
                   <a href="{{ site.url }}{{ site.baseurl }}{{ paper.paper }}">[Paper PDF]</a>
