--- a/_includes/lightning-talks.html
+++ b/_includes/lightning-talks.html
@@ -2,8 +2,9 @@
           {% for talks in site.data.sessions.lightningtalks %}
 <div style="border-bottom: 1px solid black;" id="{{ talks.name }}">
   <br> 
+              <strong>[Lightning Talk] {{ talks.talkname }} </strong>
               {% if talks.url %}
-              <h3><a href="{{ talks.rurl }}">{{talks.name}}</a></h3>
+              <h3><a href="{{ talks.url }}">{{talks.name}}</a></h3>
               {% else %}
               <h3><a href="{{ site.url }}{{ site.baseurl }}/speakers/#{{ talks.name }}">{{talks.name}}</a></h3>
               {% endif %}
