--- a/_includes/teams.html
+++ b/_includes/teams.html
@@ -38,19 +38,19 @@ li {
    <li style="margin-left: 30px;"><a href="{{ team.teammiro }}" target="_blank">Team Miroboard</a></li>
    {% endif %} 
    {% if team.pitchslide %}
-   <li style="margin-left: 30px;"><a href="https://github.com/IS-GEO/ISGEO-22/blob/gh-pages{{ team.pitchslide }}" target="_blank">Pitch Slide</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.pitchslide }}" target="_blank">Pitch Slide</a></li>
    {% endif %} 
    {% if team.introslide %}
-   <li style="margin-left: 30px;"><a href="https://github.com/IS-GEO/ISGEO-22/blob/gh-pages{{ team.introdeck }}" target="_blank">Team Intro Slides</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.introdeck }}" target="_blank">Team Intro Slides</a></li>
    {% endif %}
    {% if team.goals %}
-   <li style="margin-left: 30px;"><a href="https://github.com/IS-GEO/ISGEO-22/blob/gh-pages{{ team.goals }}" target="_blank">Goal Slides</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.goals }}" target="_blank">Goal Slides</a></li>
    {% endif %} 
    {% if team.teamupdatepdf %}
-   <li style="margin-left: 30px;"><a href="{{ team.teamupdatepdf }}>" target="_blank">Updated Goals</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.teamupdatepdf }}" target="_blank">Updated Goals</a></li>
    {% endif %}  
    {% if team.teamgithub %}
-   <li style="margin-left: 30px;"><a href="{{ team.teamgithub }}>" target="_blank">Team Github Repo</a></li>
+   <li style="margin-left: 30px;"><a href="{{ team.teamgithub }}" target="_blank">Team Github Repo</a></li>
    {% endif %} 
   
  </ul>
