fixed introslides links

--- a/_includes/teams.html
+++ b/_includes/teams.html
@@ -41,7 +41,7 @@ li {
    <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.pitchslide }}" target="_blank">Pitch Slide</a></li>
    {% endif %} 
    {% if team.introslide %}
-   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.introdeck }}" target="_blank">Team Intro Slides</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.introslide }}" target="_blank">Team Intro Slides</a></li>
    {% endif %}
    {% if team.goals %}
    <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.goals }}" target="_blank">Goal Slides</a></li>
@@ -58,7 +58,7 @@ li {
    
    <td>
     {% if team.introslide %}
-   <a href="{{ site.url }}{{ site.baseurl}}{{ team.introdeck }}" target="_blank">
+   <a href="{{ site.url }}{{ site.baseurl}}{{ team.introslide }}" target="_blank">
   <img src="{{ site.url }}{{ site.baseurl}}{{ team.introslide }}" alt="Team Intro Slide" style="border: 2px solid darkblue;">
 
    </a>
