--- a/_includes/teams.html
+++ b/_includes/teams.html
@@ -50,7 +50,7 @@ li {
    <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.teamupdatepdf }}" target="_blank">Updated Goals</a></li>
    {% endif %}  
    {% if team.teamgithub %}
-   <li style="margin-left: 30px;"><a href="{{ team.teamgithub }}" target="_blank">Team Github Repo</a></li>
+   <li style="margin-left: 30px;"><a href="{{ team.teamgithub }}" target="_blank"><img src="{{ site.url }}{{ site.baseurl}}/assets/github_30px.png">  Team Github Repo</a></li>
    {% endif %} 
   
  </ul>
