--- a/_includes/teams.html
+++ b/_includes/teams.html
@@ -38,19 +38,19 @@ li {
    <li style="margin-left: 30px;"><a href="{{ team.teammiro }}" target="_blank">Team Miroboard</a></li>
    {% endif %}
    {% if team.teammiropdf %}
-   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.teammiropdf }}" target="_blank">Team Miroboard [PDF]</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.teammiropdf }}" target="_blank">Miroboard Concept Map/Logic Model [PDF]</a></li>
    {% endif %}
    {% if team.pitchslide %}
-   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.pitchslide }}" target="_blank">Pitch Slide</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.pitchslide }}" target="_blank">Pitch Slide [PDF]</a></li>
    {% endif %} 
    {% if team.introslide %}
-   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.introslide }}" target="_blank">Team Intro Slides</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.introslide }}" target="_blank">Team Intro Slides [PDF]</a></li>
    {% endif %}
    {% if team.goals %}
-   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.goals }}" target="_blank">Goal Slides</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.goals }}" target="_blank">Goal Slides [PDF]</a></li>
    {% endif %} 
    {% if team.teamupdatepdf %}
-   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.teamupdatepdf }}" target="_blank">Updated Goals</a></li>
+   <li style="margin-left: 30px;"><a href="{{ site.url }}{{ site.baseurl}}{{ team.teamupdatepdf }}" target="_blank">Updated Goals [PDF]</a></li>
    {% endif %}  
    {% if team.teamgithub %}
    <li style="margin-left: 30px;"><a href="{{ team.teamgithub }}" target="_blank"><img src="{{ site.url }}{{ site.baseurl}}/assets/github_30px.png">  Team Github Repo</a></li>
