--- a/_includes/schedule.html
+++ b/_includes/schedule.html
@@ -154,7 +154,7 @@
                          
                           
                      
-                       {% endfor %} <br><br>
+                       {% endfor %} <br>
                           {% endif %}
 
 
