--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -15,9 +15,7 @@
       
 
       <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1632211" target="_blank"><img src="{{ site.url }}{{ site.baseurl}}/assets/NSF-200px.png" alt="NSF Logo"></a>
-      &nbsp<br>
-      <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1632211"><mark style="font-size: 12px; color: #17396a; background-color: white;">NSF Award #1632211</mark></a>
-      <br>
+      &nbsp
       <a href="https://iharp.umbc.edu/" target="_blank"><img src="{{ site.url }}{{ site.baseurl}}/assets/iharp-logo%20200px.jpeg" alt="iHarp Logo"></a>
       &nbsp <br>
       <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2118285&HistoricalAwards=false"><mark style="font-size: 12px; color: #17396a; background-color: white;">NSF Award #2118285</mark></a>
@@ -25,6 +23,9 @@
       <a href="https://www.tacc.utexas.edu/" target="_blank"><img src="{{ site.url }}{{ site.baseurl}}/assets/TACC-200px.png" alt="TACC Logo"></a>
       &nbsp
       <a href="https://is-geo.org/" target="_blank"> <img src="{{ site.url }}{{ site.baseurl}}/assets/IS-GEO-200px.png" alt="IS-GEO Logo"> </a>
+      <br>
+      <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1632211"><mark style="font-size: 12px; color: #17396a; background-color: white;">NSF Award #1632211</mark></a>
+      <br>
       {% include nav-social.html %}
     </div>
 
