added live stream link

--- a/_includes/livestream.html
+++ b/_includes/livestream.html
@@ -1,4 +1,2 @@
 
-<p style="text-align: center;">
-<strong><a href="https://youtu.be/BIfbUfZXYSs">View the Final Presentations Live Stream <br> [August 19th, 2022 @ 2pmET/1pmCT/12pmMT/11amPT] </a></strong>
-</p>
+<strong><a href="https://youtu.be/BIfbUfZXYSs"><img src="{{ site.url }}{{ site.baseurl}}/assets/youtube-logo-hd-8.png" width="25">  Final Presentations Live Stream [8/19/22]</a></strong>
